save libs locally instead of going to CDN every time

--- a/client/index.html
+++ b/client/index.html
@@ -123,12 +123,12 @@
 		-->
 
 		<!-- BEGIN DEV -->
-		<script src="https://cdn.jsdelivr.net/npm/react@18.3.1/umd/react.development.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/react-dom@18.3.1/umd/react-dom.development.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@remix-run/router@1.13.1/dist/router.umd.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/react-router@6.20.1/dist/umd/react-router.development.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/react-router-dom@6.20.1/dist/umd/react-router-dom.development.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.23.5/babel.min.js"></script>
+		<script src="lib/react.development.js"></script>
+		<script src="lib/react-dom.development.js"></script>
+		<script src="lib/router.umd.js"></script>
+		<script src="lib/react-router.development.js"></script>
+		<script src="lib/react-router-dom.development.js"></script>
+		<script src="lib/babel.min.js"></script>
 		<!-- END DEV -->
 
 		<!-- BEGIN PROD -->
